Fixed horizontal alignment of footer

--- a/lightbox/css/style.css
+++ b/lightbox/css/style.css
@@ -74,7 +74,7 @@ div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer {
 }
 
 div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms {
-  margin: 21px 0;
+  margin: 16px 0;
   float: left;
   /* line-height: 44px; */
 }
